images no longer too stretchy

--- a/style.css
+++ b/style.css
@@ -1012,3 +1012,7 @@ button.filter-button.active {
   letter-spacing: 1px;
   padding-left: 0px;
 }
+
+#media img{
+  object-fit: cover;
+}
